# taxi

./: .gitignore  com.github.alecaddd.taxi.json  meson.build
data/: com.github.alecaddd.taxi.gresource.xml
src/: Application.vala  meson.build
src/API/: IFileAccess.vala
src/Backend/: FileAccess.vala  LocalFileAccess.vala  RemoteFileAccess.vala
src/Frontend/: MainWindow.vala
src/Frontend/Widgets/: ConnectBox.vala  FilePane.vala  OperationsPopover.vala  PathBar.vala  PathBarSeparator.vala
